# rhino

./: CMakeLists.txt  FindQWT.cmake  MANUAL  Makefile  Makefile_ORIGINAL  README.md  Rhino  Rhino.pro  Rhino.pro.user.9f291ba  Rhino.pro_no_icon  info.txt  launch_Rhino.sh  maffe.txt  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_mylabel.cpp  mylabel.cpp  mylabel.h  newtable  qrc_rhino_icon.cpp  rhino_icon.qrc  spectrum.h  ui_mainwindow.h
example/: example.chn  example1  example2.FIT  example2.chn
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  spectrum.cpp  spectrum.h
